docs/src/app/globals.css
/* ... */
article {
  &:is(html[class~="light"] *) {
    --x-color-gray-400: var(--light-color-text-3);
  }

  &:is(html[class~="dark"] *) {
    --x-color-gray-400: var(--color-el-3);
  }
}

aside + div {
  --nextra-content-width: 1220px;
}

article span.m-tag {
  display: none;
}

article a:not(.showcase-link) {
  text-underline-offset: 1px;
  display: inline-flex;
  align-items: center;
}

article strong > a {
  font-weight: 500;
}

.nextra-breadcrumb {
  &:is(html[class~="light"] *) {
    --x-color-gray-700: var(--light-color-text-5);
  }
  margin-bottom: 1.12rem;
  width: fit-content;
  border-radius: 0.375rem;
}

pre code {
  --x-text-sm: 13px;
  &:is(html[class~="light"] *) {
    --x-color-gray-500: var(--light-color-text-2);
  }

  &:is(html[class~="dark"] *) {
    --x-color-gray-500: var(--color-el-2);
  }
}

pre,
div:has(+ pre) {
  &:is(html[class~="light"] *) {
    border: 0.5px solid var(--light-border-muted);
    background: var(--light-color-surface-2);
  }

  &:is(html[class~="dark"] *) {
    border: 0.5px solid var(--border);
    background: var(--tertiary-bg);
  }
  border-radius: 0.5rem;
  box-shadow: none;
}

div:has(+ pre) {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

div + pre {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

button[title="Copy code"] {
  border: none;
}

pre code.nextra-code:not([class*="twoslash-"]) > span[data-highlighted-line] {
  --bg-color: var(--light-color-surface-5);
  background-color: color-mix(in oklab, var(--bg-color) 90%, transparent);

  &:is(html[class~="dark"] *) {
    background-color: var(--color-surface-5);
  }
}

.nextra-code {
  white-space: nowrap;
}

.nextra-code > span {
  white-space-collapse: preserve;
}

/*****Sidebar******/
aside {
  &:is(html[class~="light"] *) {
    border-right: 0.5px solid var(--light-border-muted);
  }

  &:is(html[class~="dark"] *) {
    border-right: 0.5px solid var(--border);
  }
}

aside > * {
  &:is(html[class~="light"] *) {
    --x-color-primary-600: var(--light-color-text-5);
    --x-color-primary-400: var(--light-color-text-4);
  }

  &:is(html[class~="dark"] *) {
    --x-color-primary-600: #fff;
    --x-color-primary-400: oklab(
      18.2% -0.000000000000000147 0.0000000000000000204
    );
  }
}

aside > div:first-child button {
  font-weight: 500;

  &:is(html[class~="light"] *) {
    color: var(--light-color-text-6);
  }

  &:is(html[class~="dark"] *) {
    color: var(--color-primary);
  }
}

/*Size of chevron*/
aside > div:nth-child(1) button svg {
  width: 1rem;
  height: 1rem;
}

aside > div:nth-child(1) ul:before {
  inset-inline-start: calc(var(--x-spacing) * 0.92);
}

/*Active link indicator*/
aside > div:nth-child(1) ul li {
  position: relative;
}

aside > div:nth-child(1) ul li a {
  padding-block: 0.25rem;
  background: transparent;

  &:is(html[class~="light"] *) {
    --x-color-primary-800: var(--light-color-text-6);
  }

  &:hover {
    background: transparent;
  }
}

aside > div:nth-child(1) ul li.active:has(> a) {
  &::before {
    content: "";
    position: absolute;
    left: -8px;
    top: 0px;
    bottom: 0;
    height: calc(100%);
    background: var(--x-color-primary-600);
    width: 1.5px;
    transition: opacity 0.1s ease-in-out;
  }
}

aside > div:nth-child(1) ul li.active:has(a[href="/docs"]),
aside > div:nth-child(1) ul li.active:has(a[href="/examples"]),
aside > div:nth-child(1) ul li.active:has(a[href="/guides"]),
aside > div:nth-child(1) ul li.active:has(a[href="/reference"]) {
  &::before {
    content: "";
    background: transparent;
  }
}

article main li:has(ul) ul {
  margin-top: calc(var(--x-spacing) * 2);
}

aside a[href="/docs"],
aside button[data-href="/docs/reference"],
aside a[href="/examples"],
aside a[href="/guides"],
aside a[href="/reference"] {
  position: relative;
  padding-inline-start: calc((var(--button-gap) * 3) + var(--icon-position));
}

aside a[href="/docs"]::before,
aside button[data-href="/docs/reference"]::before,
aside a[href="/examples"]::before,
aside a[href="/guides"]::before,
aside a[href="/reference"]::before {
  content: "";
  position: absolute;
  left: var(--icon-position);
  top: 50%;
  transform: translateY(-50%);
  width: 0.7rem;
  height: 0.8rem;
  background-size: contain;
  background-repeat: no-repeat;
}

aside a[href="/docs"]::before,
aside a[href="/examples"]::before,
aside a[href="/guides"]::before {
  background-image: url("icons/introduction.svg");
}

aside button[data-href="/docs/reference"]::before,
aside a[href="/reference"]::before {
  background-image: url("icons/reference.svg");
}

button[data-href="/docs/reference"] svg {
  display: none;
}

button[title="Collapse sidebar"] {
  display: none;
}

aside > div:nth-child(2) {
  display: flex;
  &:is(html[class~="light"] *) {
    --x-color-nextra-bg: var(--light-color-surface-15);
  }

  &:is(html[class~="dark"] *) {
    --x-color-nextra-bg: var(--primary-bg);
  }
}

aside > div:nth-child(1) button {
  flex-direction: row-reverse;
  justify-content: flex-end;
  gap: var(--button-gap);
}

/*** Table of Contents ***/

.nextra-toc > * {
  &:is(html[class~="light"] *) {
    --x-color-gray-400: var(--light-color-text-3);
  }

  &:is(html[class~="dark"] *) {
    --x-color-gray-400: var(--color-el-3);
  }
}

.nextra-toc div > p {
  position: relative;
  color: var(--color-el-3);
  font-weight: 500;
  padding-inline-start: 2.24rem;

  &::before {
    content: "";
    position: absolute;
    left: 12px;
    bottom: 1;
    width: 1rem;
    height: 1rem;
    background-size: contain;
    background-repeat: no-repeat;
    background-image: url("icons/on-this-page.svg");
  }
}
/* ... */

